syntax = "proto3";

option csharp_namespace = "AuthRequest";

package auth;

service Authentication  {
  rpc Login (UserData) returns (TokenData);
}

message UserData {
  string Email = 1;
  string Password = 2;
}


message TokenData {
  string Token = 1;
  bool HasError = 2;
  string ErrorText = 3;
}